hard-gists/30839ae0280a5077b8669757e5efa75d/run.log
=== Docker Run Log for 30839ae0280a5077b8669757e5efa75d ===
Started at: Mi 29. Okt 13:39:52 CET 2025

[2025-10-29 13:39:53] START: Running container for 30839ae0280a5077b8669757e5efa75d
[2025-10-29 13:39:53] SUCCESS: Container 409ea06f1c0ece608d066fb242c0bff768eaa4f70dcf96eb2f7b175db7dc741c started for 30839ae0280a5077b8669757e5efa75d
=== Container logs for 30839ae0280a5077b8669757e5efa75d ===
  File "/snippet.py", line 46
    print "processing %s" % modname
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 30839ae0280a5077b8669757e5efa75d ===
[2025-10-29 13:39:55] INFO: Container 409ea06f1c0ece608d066fb242c0bff768eaa4f70dcf96eb2f7b175db7dc741c has stopped
